Version 0.1+
	* Better error messages
	* Update releases

Version 0.1 2019-03-26 by luispedro
	* First release

